# typedb

./: .bazelrc  .gitignore  CLAUDE.md  Cargo.toml  MODULE.bazel  TEST_COVERAGE_ANALYSIS.md
answer/: variable.rs  variable_value.rs
common/bytes/: byte_array.rs  bytes.rs  util.rs
common/cache/: Cargo.toml  cache.rs
common/concurrency/: interval_runner.rs
common/error/: error.rs
common/lending_iterator/: lending_iterator.rs
common/structural_equality/: structural_equality.rs
compiler/: Cargo.toml
concept/: Cargo.toml  error.rs
concept/thing/: statistics.rs  struct.rs  thing_manager.rs
database/: BUILD  Cargo.toml  database.rs  database_manager.rs  lib.rs
database/tests/: BUILD  transaction.rs
diagnostics/: metrics.rs
docs/: embedded-driver-design.md  embedded-ios-storage-analysis.md
docs/blueprints/: extensibility.md
durability/: Cargo.toml  wal.rs
encoding/: Cargo.toml
encoding/tests/: Cargo.toml  test_utils_encoding.rs
executor/: Cargo.toml
fulltext/: Cargo.toml
fulltext/src/: lib.rs  tests.rs  tests_edge_cases.rs
function/: function_manager.rs
ir/: Cargo.toml
ir/pipeline/: mod.rs
kv/: Cargo.toml  iterator.rs  keyspaces.rs  lib.rs  write_batches.rs
kv/memory/: iterator.rs  mod.rs  tests.rs
kv/redb/: iterator.rs  mod.rs  tests.rs  tests_property.rs
kv/rocks/: iterator.rs  (+3 more)
query/: Cargo.toml
resource/: constants.rs
server/: Cargo.toml
storage/: BUILD  Cargo.toml  isolation_manager.rs  iterator.rs  storage.rs
thyra-spike/: Cargo.toml
thyra-spike/src/: main.rs
user/: permission_manager.rs
vector/: Cargo.toml
(+33 files in other folders)
